unpackaged/main/default/objects/Knowledge__kav/fields/Internal_Policy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Internal_Policy_Policy__c</fullName>
    <label>Policy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>