unpackaged/main/default/objects/Knowledge__kav/fields/Internal_Policy_Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Policy_Policy_Effective_Date__c</fullName>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>