unpackaged/main/default/objects/Knowledge__kav/fields/Products_Services_Info_Products_Service6__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_Info_Products_Service6__c</fullName>
    <label>Products &amp; Services Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>