unpackaged/main/default/objects/Knowledge__kav/recordTypes/Internal_Policy.recordType-meta.xml
<RecordType>
    <fullName>Internal_Policy</fullName>
    <active>true</active>
    <label>Internal_Policy</label>
</RecordType>