unpackaged/main/default/objects/Knowledge__kav/recordTypes/Products_Services_Info.recordType-meta.xml
<RecordType>
    <fullName>Products_Services_Info</fullName>
    <active>true</active>
    <label>Products_Services_Info</label>
</RecordType>